Fix layout bug in IE9+

--- a/styles/partials/_reset.scss
+++ b/styles/partials/_reset.scss
@@ -44,7 +44,7 @@ body {
  * Define block-level HTML5 elements for older browsers.
  */
 article,aside,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section {
+footer,header,hgroup,main,menu,nav,section {
     display: block;
 }
 nav ul {
